tests/NormalTests/paczka1/fuzzy1/51442735.err
Error in line 26: VkxF A361 42,2
Error in line 30: VkxF A2 44,6
Error in line 34: tATCJoM A361 -3,8
